--- a/scripts/base/themes/github-dark.css
+++ b/scripts/base/themes/github-dark.css
@@ -34,7 +34,7 @@
   --selected-text-background-color: #303565;
   --selected-searching-text-background-color: #676853;
   --searching-text-background-color: #6c82674d;
-  --indent-guides-color: #2a3035;
+  --indent-guides-color: #30363c;
   --hint-matching-symbols-color: #55abf8;
   --tooltip-border-color: #454545;
 
