--- a/scripts/functions-editor/settings-styles/indent-guides.css
+++ b/scripts/functions-editor/settings-styles/indent-guides.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: >0.3%,last 4 version,not dead,Firefox ESR
+*/
+
 .cm-tab {
   background: linear-gradient(to right, var(--indent-guides-color) var(--indent-guides-width), transparent 0) no-repeat !important;
 }
