--- a/scripts/base/themes/atom-one-dark.css
+++ b/scripts/base/themes/atom-one-dark.css
@@ -54,7 +54,7 @@
   --brackets-color: #c99c6e;
   --matching-brackets-background-color: #535a69;
   --matching-brackets-border-color: #393f4d;
-  --nonmatching-brackets-text-color: #c4372e;
+  --non-matching-brackets-text-color: #c4372e;
 
   /* Buttons */
   --general-button-text-color: #000000;
@@ -97,7 +97,7 @@
   --dangerous-press-button-background-color: linear-gradient(0deg, #881e29, #b12431);
   --dangerous-press-button-border-color: #881e29;
 
-  /* Extension Pupup */
+  /* Extension Popup */
   --extension-popup-glow-color: #777777;
   --extension-popup-text-glow-blur-radius: 0px;
 
