--- a/scripts/base/themes/github-dark.css
+++ b/scripts/base/themes/github-dark.css
@@ -54,7 +54,7 @@
   --brackets-color: #87b6f9;
   --matching-brackets-background-color: #3f676c;
   --matching-brackets-border-color: unset;
-  --nonmatching-brackets-text-color: #c4362c;
+  --non-matching-brackets-text-color: #c4362c;
 
   /* Buttons */
   --general-button-text-color: #0e1116;
@@ -97,7 +97,7 @@
   --dangerous-press-button-background-color: linear-gradient(0deg, #98222c, #c32835);
   --dangerous-press-button-border-color: #98222c;
 
-  /* Extension Pupup */
+  /* Extension Popup */
   --extension-popup-glow-color: #929292;
   --extension-popup-text-glow-blur-radius: 0px;
 
