--- a/scripts/base/themes/visual-studio-light.css
+++ b/scripts/base/themes/visual-studio-light.css
@@ -54,7 +54,7 @@
   --brackets-color: #1330f0;
   --matching-brackets-background-color: #e8f1e5;
   --matching-brackets-border-color: #b9b9b9;
-  --nonmatching-brackets-text-color: #fb4f43;
+  --non-matching-brackets-text-color: #fb4f43;
 
   /* Buttons */
   --general-button-text-color: #ffffff;
@@ -97,7 +97,7 @@
   --dangerous-press-button-background-color: linear-gradient(0deg, #9e0e1a, #b21724);
   --dangerous-press-button-border-color: #9e0e1a;
 
-  /* Extension Pupup */
+  /* Extension Popup */
   --extension-popup-glow-color: #aeaeae;
   --extension-popup-text-glow-blur-radius: 0px;
 
