--- a/scripts/functions-editor/settings-styles/font-feature-settings.css
+++ b/scripts/functions-editor/settings-styles/font-feature-settings.css
@@ -43,7 +43,8 @@
 .CodeMirror-linenumber.CodeMirror-gutter-elt,
 .CodeMirror-line span,
 .CodeMirror-hint,
-.CodeMirror-Tern-tooltip.deluge-tooltip-example.CodeMirror-Tern-hint-doc *,
+.CodeMirror-Tern-tooltip,
+.CodeMirror-Tern-tooltip *,
 .argTooltip.deluge-cm-script.argTooltip-anim,
 #outputToggleHook .dIB.mT5.vam,
 .pLR10.mB10.pR,
